# PyECS

./: .coveragerc  .gitignore  EntityManager.py  LICENSE  Makefile  README.md  World.py  __init__.py  codecov.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  generate-typings.yml
common/: Types.py  __init__.py
containers/: Archetype.py  ComponentStorage.py  __init__.py
core/: World.py  __init__.py
docker/: Dockerfile.benchmark  benchmark_visualizer.py  docker-compose.benchmark.yml  run_benchmarks.py  run_docker_benchmarks.sh
docs/sphinx/: api.rst  architecture.rst  conf.py  getting_started.rst  index.rst  troubleshooting.rst  tutorial.rst
examples/: 01_entities.py  02_components.py  03_systems.py  04_world.py  05_queries.py  06_archetypes.py  unsafe_example.py
exceptions/: Exceptions.py  __init__.py
helpers/: Deprecation.py  Statuses.py  Unsafe.py  __init__.py
managers/: EntityManager.py  SystemManager.py  __init__.py
mermaid/Archetype/: add_entity.mermaid  get_component.mermaid  iter_components.mermaid  iter_entities.mermaid  remove_entity.mermaid
mermaid/ComponentStorage/: add_component.mermaid  get_component.mermaid  get_entity_components.mermaid  has_component.mermaid  move_entity_to_archetype.mermaid  remove_component.mermaid  remove_entity.mermaid
mermaid/EntityManager/: create_entity.mermaid  destroy_entity.mermaid  is_alive.mermaid
mermaid/Query/: execute.mermaid  with_components.mermaid  without_components.mermaid
mermaid/SystemManager/: register_system.mermaid  remove_system.mermaid  unregister_system.mermaid  update_all.mermaid
mermaid/Unsafe/: auto_unsafe_decorator.mermaid  exception_hierarchy.mermaid  unsafe_method_flow.mermaid
mermaid/World/: add_component.mermaid  add_system.mermaid  create_entity.mermaid  create_entity_or_raise.mermaid  destroy_entity.mermaid  get_component.mermaid  get_component_or_raise.mermaid  get_components.mermaid  get_components_or_raise.mermaid  remove_component.mermaid  remove_system.mermaid  update.mermaid
processing/: System.py  __init__.py
querying/: Query.py  __init__.py
tests/: conftest.py  test_archetype.py  test_component_storage.py  test_entity_manager.py  test_query.py  test_system.py  test_world.py
typings/pyecs/: __init__.pyi
typings/pyecs/common/: Types.pyi  __init__.pyi
typings/pyecs/containers/: Archetype.pyi  ComponentStorage.pyi  __init__.pyi
typings/pyecs/core/: World.pyi  __init__.pyi
typings/pyecs/exceptions/: Exceptions.pyi  __init__.pyi
(+11 files in other folders)
